use getFirst()